// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Should render a Card 1`] = `
.c1 {
  display: block;
  box-sizing: border-box;
  line-height: 1.43;
  overflow: hidden;
  color: #000000;
  border: 1px solid #E5E5E5;
  background-color: #FFFFFF;
  height: 100%;
  width: 100%;
}

.c0 {
  position: relative;
  outline: none;
  width: 100%;
}

@media (min-width:512px) {

}

<div
  className="c0"
>
  <div
    className="c1"
    display="block"
    elevation={0}
  >
    Card 
  </div>
</div>
`;

exports[`Card Should render a Card with badges 1`] = `
.c5 {
  margin: 0;
  font-size: 12px;
  line-height: 16px;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c6 {
  background-color: #00C8DC;
  color: #FFFFFF;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 24px;
  padding-right: 24px;
  margin-left: 0;
  margin-right: 9px;
  box-sizing: content-box;
  height: 28px;
  overflow: auto;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  overflow: hidden;
  height: 30px;
}

.c4 {
  display: inline-block;
  position: relative;
  margin-right: 8px;
  max-width: 100%;
}

.c7 {
  display: inline-block;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c2 {
  position: absolute;
  left: 0;
  top: -14px;
  max-width: 100%;
  z-index: 1;
}

.c8 {
  display: block;
  box-sizing: border-box;
  line-height: 1.43;
  overflow: hidden;
  color: #000000;
  border: 1px solid #E5E5E5;
  background-color: #FFFFFF;
  height: 100%;
  width: 100%;
}

.c0 {
  position: relative;
  outline: none;
  width: 100%;
}

.c0 .c1 {
  -webkit-transition-duration: 0.15s;
  transition-duration: 0.15s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-property: transform;
  transition-property: transform;
}

@media (max-width:752px) {
  .c2 > div > div:nth-child(n + 3) {
    display: none;
  }
}

@media (min-width:512px) {

}

<div
  className="c0"
>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <div
        className="c4"
      >
        <span
          className="c5 c6"
          fontSize="xxs"
        >
          <div
            className="c7"
          >
            New
          </div>
        </span>
      </div>
      <div
        className="c4"
      >
        <span
          className="c5 c6"
          fontSize="xxs"
        >
          <div
            className="c7"
          >
            100% Free
          </div>
        </span>
      </div>
    </div>
  </div>
  <div
    className="c8"
    display="block"
    elevation={0}
  >
    Card 
  </div>
</div>
`;

exports[`Card Should render a Card with badges and hover effect 1`] = `
.c5 {
  margin: 0;
  font-size: 12px;
  line-height: 16px;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c6 {
  background-color: #00C8DC;
  color: #FFFFFF;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 24px;
  padding-right: 24px;
  margin-left: 0;
  margin-right: 9px;
  box-sizing: content-box;
  height: 28px;
  overflow: auto;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  overflow: hidden;
  height: 30px;
}

.c4 {
  display: inline-block;
  position: relative;
  margin-right: 8px;
  max-width: 100%;
}

.c7 {
  display: inline-block;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c2 {
  position: absolute;
  left: 0;
  top: -14px;
  max-width: 100%;
  z-index: 1;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  line-height: 1.43;
  overflow: hidden;
  color: #000000;
  border: 1px solid #E5E5E5;
  background-color: #FFFFFF;
  cursor: pointer;
  -webkit-transition-duration: 0.15s;
  transition-duration: 0.15s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  -webkit-transition-property: border-color,box-shadow,-webkit-transform;
  -webkit-transition-property: border-color,box-shadow,transform;
  transition-property: border-color,box-shadow,transform;
  border-radius: 4px;
  height: 100%;
  width: 100%;
}

.c0 {
  position: relative;
  outline: none;
  width: 100%;
}

.c0 .c1 {
  -webkit-transition-duration: 0.15s;
  transition-duration: 0.15s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-property: transform;
  transition-property: transform;
}

@media (max-width:752px) {
  .c2 > div > div:nth-child(n + 3) {
    display: none;
  }
}

@media (min-width:512px) {
  .c8:hover {
    -webkit-transform: translateY(-1px);
    -ms-transform: translateY(-1px);
    transform: translateY(-1px);
    box-shadow: 0 24px 38px 3px rgba(0,0,0,0.07),0 9px 46px 8px rgba(0,0,0,0.06),0 11px 15px -7px rgba(0,0,0,0.10);
    border-color: rgba(0,0,0,0);
  }
}

@media (min-width:512px) {

}

<div
  className="c0"
>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <div
        className="c4"
      >
        <span
          className="c5 c6"
          fontSize="xxs"
        >
          <div
            className="c7"
          >
            New
          </div>
        </span>
      </div>
      <div
        className="c4"
      >
        <span
          className="c5 c6"
          fontSize="xxs"
        >
          <div
            className="c7"
          >
            100% Free
          </div>
        </span>
      </div>
    </div>
  </div>
  <div
    className="c8"
    display="flex"
    elevation={0}
    shape="rounded-small"
  >
    Card 
  </div>
</div>
`;

exports[`Card Should render a Card with custom padding 1`] = `
.c1 {
  display: block;
  box-sizing: border-box;
  line-height: 1.43;
  overflow: hidden;
  padding-top: 24px;
  padding-right: 24px;
  padding-bottom: 24px;
  padding-left: 24px;
  color: #000000;
  border: 1px solid #E5E5E5;
  background-color: #FFFFFF;
  height: 100%;
  width: 100%;
}

.c0 {
  position: relative;
  outline: none;
  width: 100%;
}

@media (min-width:512px) {

}

<div
  className="c0"
>
  <div
    className="c1"
    display="block"
    elevation={0}
  >
    Card 
  </div>
</div>
`;

exports[`Card Should render a Card with custom shape 1`] = `
.c1 {
  display: block;
  box-sizing: border-box;
  line-height: 1.43;
  overflow: hidden;
  color: #000000;
  border: 1px solid #E5E5E5;
  background-color: #FFFFFF;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  height: 100%;
  width: 100%;
}

.c0 {
  position: relative;
  outline: none;
  width: 100%;
}

@media (min-width:512px) {

}

<div
  className="c0"
>
  <div
    className="c1"
    display="block"
    elevation={0}
    shape={
      Object {
        "bottomLeft": "sharp",
        "bottomRight": "sharp",
        "topLeft": "rounded-small",
        "topRight": "rounded-small",
      }
    }
  >
    Card 
  </div>
</div>
`;

exports[`Card Should render a Card with elevation 1`] = `
.c1 {
  display: block;
  box-sizing: border-box;
  line-height: 1.43;
  overflow: hidden;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.07),0 2px 1px -1px rgba(0,0,0,0.06),0 1px 3px 0 rgba(0,0,0,0.10);
  color: #000000;
  background-color: #FFFFFF;
  height: 100%;
  width: 100%;
}

.c0 {
  position: relative;
  outline: none;
  width: 100%;
}

@media (min-width:512px) {

}

<div
  className="c0"
>
  <div
    className="c1"
    display="block"
    elevation={1}
  >
    Card 
  </div>
</div>
`;

exports[`Card Should render a Card with hover 1`] = `
.c1 {
  display: block;
  box-sizing: border-box;
  line-height: 1.43;
  overflow: hidden;
  color: #000000;
  border: 1px solid #E5E5E5;
  background-color: #FFFFFF;
  cursor: pointer;
  -webkit-transition-duration: 0.15s;
  transition-duration: 0.15s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  -webkit-transition-property: border-color,box-shadow,-webkit-transform;
  -webkit-transition-property: border-color,box-shadow,transform;
  transition-property: border-color,box-shadow,transform;
  height: 100%;
  width: 100%;
}

.c0 {
  position: relative;
  outline: none;
  width: 100%;
}

@media (min-width:512px) {
  .c1:hover {
    -webkit-transform: translateY(-1px);
    -ms-transform: translateY(-1px);
    transform: translateY(-1px);
    box-shadow: 0 8px 10px 1px rgba(0,0,0,0.07),0 3px 14px 2px rgba(0,0,0,0.06),0 5px 5px -3px rgba(0,0,0,0.10);
    border-color: rgba(0,0,0,0);
  }
}

@media (min-width:512px) {

}

<div
  className="c0"
>
  <div
    className="c1"
    display="block"
    elevation={0}
  >
    Card 
  </div>
</div>
`;

exports[`Card Should render a Card with no border on right 1`] = `
.c1 {
  display: block;
  box-sizing: border-box;
  line-height: 1.43;
  overflow: hidden;
  color: #000000;
  border: 1px solid #E5E5E5;
  background-color: #FFFFFF;
  border-right-width: 0px;
  height: 100%;
  width: 100%;
}

.c0 {
  position: relative;
  outline: none;
  width: 100%;
}

@media (min-width:512px) {

}

<div
  className="c0"
>
  <div
    className="c1"
    display="block"
    elevation={0}
  >
    Card 
  </div>
</div>
`;

exports[`Card Should render a Card with padding 1`] = `
.c1 {
  display: block;
  box-sizing: border-box;
  line-height: 1.43;
  overflow: hidden;
  padding: 4px;
  color: #000000;
  border: 1px solid #E5E5E5;
  background-color: #FFFFFF;
  height: 100%;
  width: 100%;
}

.c0 {
  position: relative;
  outline: none;
  width: 100%;
}

@media (min-width:512px) {

}

<div
  className="c0"
>
  <div
    className="c1"
    display="block"
    elevation={0}
  >
    Card 
  </div>
</div>
`;

exports[`Card Should render a Card with padding, noBorder, shape, surface 1`] = `
.c1 {
  display: block;
  box-sizing: border-box;
  line-height: 1.43;
  overflow: hidden;
  padding-top: 32px;
  padding-right: 24px;
  padding-bottom: 32px;
  padding-left: 24px;
  color: #000000;
  border: 1px solid #E5E5E5;
  background-color: #FFFFFF;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  height: 100%;
  width: 100%;
}

.c0 {
  position: relative;
  outline: none;
  width: 100%;
}

@media (min-width:512px) {

}

<div
  className="c0"
>
  <div
    className="c1"
    display="block"
    elevation={0}
    shape={
      Object {
        "bottomLeft": "sharp",
        "bottomRight": "sharp",
        "topLeft": "rounded-small",
        "topRight": "rounded-small",
      }
    }
  >
    Card 
  </div>
</div>
`;

exports[`Card Should render a Card with shape 1`] = `
.c1 {
  display: block;
  box-sizing: border-box;
  line-height: 1.43;
  overflow: hidden;
  color: #000000;
  border: 1px solid #E5E5E5;
  background-color: #FFFFFF;
  border-radius: 0;
  height: 100%;
  width: 100%;
}

.c0 {
  position: relative;
  outline: none;
  width: 100%;
}

@media (min-width:512px) {

}

<div
  className="c0"
>
  <div
    className="c1"
    display="block"
    elevation={0}
    shape="sharp"
  >
    Card 
  </div>
</div>
`;

exports[`Card Should render a Card with surface 1`] = `
.c1 {
  display: block;
  box-sizing: border-box;
  line-height: 1.43;
  overflow: hidden;
  color: #000000;
  border: 1px solid #E5E5E5;
  background-color: #FFFFFF;
  height: 100%;
  width: 100%;
}

.c0 {
  position: relative;
  outline: none;
  width: 100%;
}

@media (min-width:512px) {

}

<div
  className="c0"
>
  <div
    className="c1"
    display="block"
    elevation={0}
  >
    Card 
  </div>
</div>
`;
